Fix long words without breaks overflowing

--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ input[type="checkbox"] {
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
+  overflow-wrap: anywhere;
 }
 
 .add-book {
